# vosges-independantes.org

./: .gitignore  Cargo.toml  Procfile  Rocket.toml  dico.sqlite  manage.py  requirements.txt
dictionary/: models.py  urls.py  views.py
dictionary/templates/dico/: index.html
home/: views.py
home/templates/home/: index.html
kapnoc_pages/: admin.py  apps.py  models.py  urls.py  views.py
kapnoc_pages/migrations/: 0001_initial.py  0002_auto_20201101_1331.py
loguedje/: apps.py  urls.py  views.py
loguedje/migrations/: 0001_initial.py
loguedje/templates/loguedje/: dictionary.html  translate.html
markdownpages/: apps.py  models.py
markdownpages/migrations/: 0001_initial.py
nature/: admin.py  apps.py  models.py  urls.py  views.py
nature/migrations/: 0001_initial.py  0002_naturepage_description.py  0003_naturepage_body_vo.py
nature/templates/nature/: index.html  naturepage-detail.html  naturepage-list.html  page.html
src/: main.rs
src/dico/: mod.rs
src/gallery/: mod.rs
static/style/: global.css
templates/: base.html.hbs  dico.html.hbs  index.html.hbs
utils/: admin.py  models.py  urls.py  views.py
utils/migrations/: 0001_initial.py
vosges_independantes_org/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
vosges_independantes_org/static/style/: global.css
vosges_independantes_org/templates/: base.html
