[package]
name = "vosges-independantes"
version = "0.1.0"
authors = ["Tanguy Gérôme <me@kapno.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
rusqlite = "0.14.0"
handlebars = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "1.0.1"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["sqlite_pool", "serve", "handlebars_templates", "tera_templates"]
